# rustominion

./: .gitignore  Cargo.toml  Cranky.toml  build.rs  rustfmt.toml
builder/: Cargo.toml
builder/src/: lib.rs  main.rs
builder/src/parse_js/: deserialize.rs  gen_class.rs  generate.rs  mod.rs  utility.rs
data/: map_contents.json  template.rs
rustominion/: Cargo.toml
rustominion/src/: lib.rs
