[package]
name = "rustominion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
readonly = "0.2.10"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
