[package]
name = "rustominion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
once_cell = "1.18.0"
readonly = "0.2.10"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0"

[lints.rust]
unsafe="deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"